--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT=3000
 SECRET_KEY=mysecretkey
-DB_CONNECTION_STRING=mongodb://localhost:5000/mydatabase
+DB_CONNECTION_STRING=connectionstring
+DEFAULT_PASSWORD=user123
+ADMIN_LOGIN=admin
+ADMIN_PASSWORD=admin
